# Medical

./: .env.example  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: cache.py  config.py  database.py  dependencies.py  main.py
backend/app/ai/: claim_extraction.py  embeddings.py  llm.py  retrieval.py  scoring.py  verification.py
backend/app/ai/graph/: workflow.py
backend/app/api/v1/: auth.py  router.py
backend/app/middleware/: observability.py
backend/app/models/: __init__.py  audit.py  document.py  evaluation.py  query.py  user.py
backend/app/repositories/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py
backend/app/utils/: audit.py  exceptions.py  logger.py  security.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_auth.py  test_claim_extraction.py  test_retrieval.py  test_scoring.py
docker/: prometheus.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ClaimCard.tsx  ConfidenceIndicator.tsx  HallucinationBadge.tsx  MockDataBanner.tsx  Providers.tsx  SourceCard.tsx  StreamingAnswer.tsx  ThemeToggle.tsx
frontend/hooks/: useAdmin.ts  useAsk.ts  (+5 more)
ingestion/: pipeline.py
nginx/: nginx.conf
scripts/: ingest.py  seed_demo_data.py
(+21 files in other folders)
